--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ after_failure:
     - bash /home/travis/build/mikaem/fenicstools/tests/print_compilelog.sh
 
 script:
-    - cd $PWD/tests; py.test
+    - cd $PWD/cbc/tests; py.test
