--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     - conda config --set always_yes yes 
     - conda config --add channels mikaem/label/dev
     - conda config --add channels mikaem
-    - conda install h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
+    - conda install gcc=4.9.1 h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
     - python setup.py install
 
 after_failure:
