--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
     - "2.7"
 
 sudo: false
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -q
+  - sudo apt-get install gcc-4.9 -y
         
 install:
     - wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -13,7 +18,7 @@ install:
     - conda config --set always_yes yes 
     - conda config --add channels mikaem/label/dev
     - conda config --add channels mikaem
-    - conda install gcc=4.9.1 h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
+    - conda install h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
     - python setup.py install
 
 after_failure:
