--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,6 @@ python:
     - "2.7"
 
 sudo: false
-
-addons:
- apt:
-   sources:
-   - ubuntu-toolchain-r-test
-   packages:
-   - gcc-4.9
-   - g++-4.9
         
 install:
     - wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -19,14 +11,10 @@ install:
     - export PATH="$HOME/miniconda/bin:$PATH"
     - unset PYTHONPATH
     - conda config --set always_yes yes 
-    - conda config --add channels mikaem/label/dev
+    - conda config --add channels mikaem/label/test
     - conda config --add channels mikaem
     - conda install h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
     - python setup.py install
-
-after_failure:
-    - cd $HOME/.instant/error
-    - bash /home/travis/build/mikaem/fenicstools/tests/print_compilelog.sh
 
 script:
     - cd $PWD/cbc/tests; py.test
