--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
     - unset PYTHONPATH
     - conda config --set always_yes yes 
     - conda config --add channels mikaem/label/test
-    - conda config --add channels mikaem
-    - conda install h5py=2.6.0 fenics=1.7.0 pyvtk mpi4py hwloc pytest boost=1.57.0
+    - conda install h5py=2.6.0 fenics=1.7.0 pyvtk pytest
     - python setup.py install
 
 script:
